# joshagachi-godot

./: .gitignore  LICENSE  build_info.json  default_screen.gd  default_screen.gd.uid  default_screen.tscn  export_presets.cfg  export_presets.cfg1780015968.tmp  grid_container_keep_square.gd  grid_container_keep_square.gd.uid  icon.svg.import  joshagachi_grid.tscn  joshagachi_icon.gd  joshagachi_icon.tscn  joshagachi_logic.gdextension  joshagachi_logic.gdextension.uid  landing_screen.tscn  project.godot  select_pet_button.gd  select_pet_button.gd.uid  tiling_background.gdshader  tiling_background.gdshader.uid  title.gd  title.gd.uid
addons/joshagachi_logic/: Cargo.toml  bacon.toml
addons/joshagachi_logic/.cargo/: config.toml
addons/joshagachi_logic/bacon/pre_export/: Cargo.toml
addons/joshagachi_logic/bacon/pre_export/src/: main.rs
addons/joshagachi_logic/src/: debug_properties.rs  game_screens.rs  lib.rs  save_data.rs  save_game.rs  scene_manager.rs  user.rs  view.rs
app/: default_button_theme.tres  default_screen.gd  default_screen.tscn  game_screens.gd  game_screens.gd.uid  game_screens.tscn  item_button.tres  joshagachi_grid.tscn  joshagachi_icon.gd  joshagachi_icon.gd.uid  joshagachi_icon.tscn  landing_screen.tscn  name_screen.tscn  purchase_item_button.gd  purchase_item_button.gd.uid  purchase_item_button.tscn  redo_selection_button.gd  redo_selection_button.gd.uid  select_pet_button.gd  shop_grid.tscn  tiling_background.tscn  title.gd
assets/: Games.png.import  TempTitle.png.import  Yummies.png.import
exports/: index.apple-touch-icon.png.import  (+4 more)
(+70 files in other folders)
